[package]
name = "into-response"
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
authors = ["Nuclefpv Contributors <team@nuclefpv.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NuclEnergy/into-response"
homepage = "https://github.com/NuclEnergy/into-response"
description = "IntoResponse derive for Axum framework."
categories = ["web-programming"]
keywords = ["axum", "response", "derive"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
syn = "2"


[dev-dependencies]
axum = { version = "0.8", features = ["json"] }
